feat: 完成抖音去水印功能(显示类)开发

--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ plugins {
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.21' apply false
+    // 新的
+    id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
